WEBSCRP CourseWork Upload

--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,7 @@ fabric.properties
 .idea/Univeristy-WEBSCRP-Challenges.iml
 .idea/vcs.xml
 .idea/workspace.xml
+
+Course Work/\.vscode/
+
+Course Work/ws_cwk_2018/\.idea/
