Repo Update & Cleanup

--- a/Week 8/ws_npm/package.json
+++ b/Week 8/ws_npm/package.json
@@ -22,8 +22,7 @@
   },
   "dependencies": {
     "express": "^4.16.2",
-    "qunit": "^2.8.0",
-    "underscore": "^1.9.1"
+    "qunit": "^0.9.1"
   },
   "bugs": {
     "url": "https://github.com/portsoc/ws_npm/issues"
